...
	}

	render() {
		console.log(global.first_name);
		return (
			<ScrollView style={styles.big}>
				<View testID="homepage" style={styles.container}>
					<View style={styles.welcome}>
						<View style={styles.welcomeImage}>
							<Image source={require('../assets/logo.png')} />
						</View>
						<LinearGradient
							start={{x: 0.8, y: 1}}
...
