...
// import AsyncStorage from '@react-native-async-storage/async-storage';
// const { signIn } = React.useContext(AuthContext);

class DoctorSignIn extends Component {
	state = {
		email: '',
		password: '',
		// emailList: [],
		serverData: [],
		user: '',
		cookie: '',
	};

...
	};

	async signin() {
		// var current_user = '';
		// CookieManager.clearAll();
		axios
			.post('http://54.176.99.202:5000/doctor/signin', {
				//  axios.post('http://10.0.2.2:5000/doctor/signin', {
				withCredentials: true,
				email: this.state.email,
				password: this.state.password,
				// email: "alexjones@gmail.com",
				// password: "12345678",
...
								style={styles.toggletextDoctor}
							>
								<Text>DOCTOR</Text>
							</TouchableOpacity>
						</View>
						<View style={styles.togglePatient}>
							<TouchableOpacity testID="patientToggle">
								<Text
									style={styles.buttonText}
									onPress={() =>
										this.props.navigation.navigate('PatientSignIn')
									}
								>
...
								autoCapitalize="none"
								onChangeText={this.handlePassword}
								required
							/>
						</View>
						<TouchableOpacity
							testID="signin_button"
							style={styles.submitButton}
							onPress={() => this.signin()}
						>
							<Text style={styles.submitButtonText}>SIGN IN</Text>
						</TouchableOpacity>
					</View>
...
