...
						),
					}}
				/>
				<Tab.Screen
					name="Settings"
					component={DoctorSettingsPage}
					testID="Settings_Tab"
					options={{
						tabBarLabel: 'Settings',
						tabBarIcon: ({color}) => (
							<MaterialCommunityIcons name="wrench" color={color} size={26} />
						),
					}}
...
